testsuite/poke.pkl/cond-exp-diag-3.pk
/* { dg-do compile } */

var i = 1 ? 10 : 20U; /* { dg-error "\n.*exactly the same type" } */
